mon/gpu-proxy.yaml
kind: Service
apiVersion: v1
metadata:
  name: gpu-mon
  namespace: monitoring
  labels:
    k8s-app: gpu-mon
spec:
  ports:
  - protocol: TCP
    name: web
    port: 80
---
kind: Endpoints
apiVersion: v1
metadata:
  name: gpu-mon
  namespace: monitoring
  labels:
    k8s-app: gpu-mon
subsets:
  - addresses:
      - ip: 67.58.53.155
      - ip: 67.58.53.156
      - ip: 192.5.19.133
      - ip: 198.17.101.69
    ports:
      - port: 9114
        name: web
